chapter4/bbox-cap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bbox-cap
  namespace: default
spec:
  containers:
  - name: demo
    image: busybox
    imagePullPolicy: IfNotPresent
    command: ["/bin/httpd", "-f"]
    securityContext:
      runAsUser: 100
      runAsGroup: 100
      capabilities:
        drop: ['all']
        add: ['NET_BIND_SERVICE']
      allowPrivilegeEscalation: true
